# bindgen_inline_test

./: Cargo.toml  build.rs  input.h  readme.md
src/: bindings.rs  lib.rs  main.rs
