[package]
name = "my_inline"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
lto = "thin"

[build-dependencies]
bindgen = { version = "0.69.2", features = ["experimental"] }

